# siorb

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FINAL_CHECKLIST.md  LICENSE  PLANS.md  README.md  SECURITY.md  deny.toml  release.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  catalog-mapping.yml  config.yml
.github/workflows/: benchmark.yml  catalog-health.yml  catalog.yml  ci.yml  native-smoke.yml  packaging.yml  pages.yml  release-candidate.yml  release.yml  security.yml
benches/: README.md  baseline.json
catalog/: README.md  build-index.mjs  catalog.toml  index.json  validate.mjs  verify-fixtures.mjs  verify-runtime-fixtures.mjs
catalog/lib/: manifest.mjs
catalog/policies/: developer-workstation.toml  enterprise-restricted.toml  secure-defaults.toml
catalog/schemas/: catalog-index.schema.json  package.schema.json  policy.schema.json
catalog/trusted-root/: README.md
crates/siorb-backends/: Cargo.toml
crates/siorb-backends/src/: lib.rs
crates/siorb-bundle/: Cargo.toml
crates/siorb-bundle/src/: lib.rs
crates/siorb-catalog/: Cargo.toml
crates/siorb-catalog/src/: lib.rs
crates/siorb-cli/: Cargo.toml
crates/siorb-cli/src/: lib.rs  main.rs
crates/siorb-cli/tests/: e2e.rs
crates/siorb-core/: Cargo.toml
crates/siorb-core/src/: lib.rs
crates/siorb-executor/: Cargo.toml
crates/siorb-executor/src/: lib.rs
crates/siorb-planner/: Cargo.toml
crates/siorb-planner/src/: lib.rs
crates/siorb-platform/: Cargo.toml
crates/siorb-platform/src/: lib.rs
crates/siorb-policy/: Cargo.toml
crates/siorb-policy/src/: lib.rs
crates/siorb-resolver/: Cargo.toml
crates/siorb-resolver/src/: lib.rs
crates/siorb-state/: Cargo.toml
crates/siorb-state/src/: lib.rs
crates/siorb-update/: Cargo.toml
crates/siorb-update/src/: lib.rs
crates/siorb-xtask/: Cargo.toml
crates/siorb-xtask/src/: benchmark.rs  main.rs  release.rs  repository.rs  support.rs
docs/: backend-contract.md  bundle-format.md  catalog-format.md  index.md  known-limitations.md  migration.md  offline-use.md  platform-support.md  policy-format.md  release-process.md  release-verification.md  threat-model.md  troubleshooting.md
docs/adr/: 0000-template.md  0001-offline-first-no-service.md  0002-rust-workspace-boundaries.md  0003-trusted-static-catalog.md  0004-plan-before-mutation.md  0005-generated-static-catalog-site.md  README.md
docs/architecture/: data-flow.md  index.md
docs/contributing/: catalog-governance.md  manifest-authoring.md
docs/getting-started/: linux.md  macos.md  windows.md
docs/reference/: commands.md  json-and-exit-codes.md  state-and-receipts.md
docs/security/: incident-response.md  key-rotation.md  trusted-updates.md
fuzz/: Cargo.toml  README.md
fuzz/corpus/archive_path/: safe
fuzz/corpus/bundle_toml/: conflicting.toml  minimal.toml
fuzz/corpus/catalog_json/: duplicate_alias.json  minimal.json
fuzz/corpus/command_spec/: safe.json  unsafe.json
fuzz/corpus/os_release/: adversarial  ubuntu
fuzz/corpus/terminal_output/: ansi
fuzz/corpus/url_policy/: domains.json
fuzz/dictionaries/: bundle_toml.dict  catalog_json.dict
fuzz/fuzz_targets/: archive_path.rs  archive_tar.rs  archive_zip.rs  backend_query.rs  bundle_toml.rs  catalog_json.rs  command_spec.rs  os_release.rs  terminal_output.rs  url_policy.rs
packaging/: README.md
packaging/windows/: siorb.wxs
schemas/: README.md
schemas/v1/: bundle-lock.schema.json  bundle.schema.json  (+8 more)
scripts/: check_action_pins.py  check_clean_tree.py  check_secrets.py
tests/: Cargo.toml  README.md  fixture_integrity.py  schema_contract.py
tests/end-to-end/: README.md  scenario_contract.rs  scenarios.json
tests/fixtures/backends/: captured-output.json  contract-cases.json
tests/fixtures/catalog/: ambiguous-code.json
tests/fixtures/platform-detection/: adversarial.os-release  alpine-3.21.os-release  debian-12.os-release  fedora-42.os-release  opensuse-15.6.os-release  rhel-10.os-release  scenarios.json  ubuntu-24.04.os-release
tests/fixtures/schemas/v1/: cases.json
tests/fixtures/schemas/v1/invalid/bundle-lock/: targets-array.json
tests/fixtures/schemas/v1/invalid/command-output/: success-with-error.json  unknown-top-level-field.json  wrong-schema-version.json
tests/fixtures/schemas/v1/invalid/execution-plan/: arbitrary-shell.json  incomplete-revalidation.json
tests/fixtures/schemas/v1/invalid/receipt/: bad-timestamp.json
tests/fixtures/schemas/v1/invalid/transaction-event/: negative-sequence.json
tests/fixtures/schemas/v1/valid/bundle/: developer-workstation.json
tests/fixtures/schemas/v1/valid/bundle-lock/: ubuntu.json
tests/fixtures/schemas/v1/valid/command-output/: doctor-success.json
tests/fixtures/schemas/v1/valid/execution-plan/: install-firefox.json
tests/fixtures/schemas/v1/valid/execution-report/: no-change.json
tests/fixtures/schemas/v1/valid/receipt/: firefox.json
tests/fixtures/schemas/v1/valid/resolution/: firefox-apt.json
tests/fixtures/schemas/v1/valid/transaction-event/: step-completed.json
tests/fixtures/state/: interrupted-transaction.jsonl
tests/golden/platform/: alpine-arm64.json  alpine-x86_64.json  arch-arm64.json  arch-x86_64.json  debian-x86_64.json  fedora-x86_64.json  macos-arm64.json  macos-rosetta2.json  macos-x86_64.json  opensuse-arm64.json  opensuse-x86_64.json  rhel-arm64.json  ubuntu-arm64.json  ubuntu-container-missing-tools.json  ubuntu-unsupported-version.json  ubuntu-wsl2.json  unknown-host.json  windows-arm64.json  windows-wow64.json  windows-x86_64.json
tests/integration/: backend_contract.rs  backend_output_security.rs  json_contract.rs  platform_fixtures.rs  state_contract.rs
tests/security/: README.md  archive-paths.json  archive_security.rs  argument-injection.json  security_regressions.rs  state-permissions.json  terminal-output.json  tuf-attacks.json  unicode-ambiguity.json  update_security.rs  url-policy.json
tests/src/: lib.rs
website/: README.md  build.mjs  validate.mjs
(+112 files in other folders)
