[workspace]
resolver = "2"
members = [
  "crates/siorb-core",
  "crates/siorb-platform",
  "crates/siorb-catalog",
  "crates/siorb-policy",
  "crates/siorb-resolver",
  "crates/siorb-planner",
  "crates/siorb-backends",
  "crates/siorb-executor",
  "crates/siorb-state",
  "crates/siorb-bundle",
  "crates/siorb-update",
  "crates/siorb-cli",
  "crates/siorb-xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/bulengerk/siorb"
authors = ["Siorb contributors"]
publish = false

[workspace.dependencies]
base64 = "0.22.1"
clap = { version = "4.5.40", features = ["derive", "env", "string"] }
clap_complete = "4.5"
ed25519-dalek = { version = "2.2.0", features = ["serde", "rand_core"] }
flate2 = "1.1.2"
hex = "0.4.3"
libc = "0.2.174"
proptest = "1.7.0"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "=0.12.28", default-features = false, features = ["blocking", "rustls-tls"] }
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tar = "0.4.44"
tempfile = "3.20.0"
thiserror = "2.0.12"
toml = "0.8.23"
unicode-normalization = "0.1.24"
url = { version = "2.5.4", features = ["serde"] }
walkdir = "2.5.0"
zip = { version = "4.0.0", default-features = false, features = ["deflate"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Public failure modes use stable typed reason codes and are documented in the
# command/security references; repeating an Errors section on every thin API
# wrapper obscures those contracts.
missing_errors_doc = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
