[package]
name = "siorb-backends"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
siorb-catalog = { path = "../siorb-catalog" }
siorb-core = { path = "../siorb-core" }
siorb-resolver = { path = "../siorb-resolver" }

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
