[package]
name = "siorb-bundle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
siorb-catalog = { path = "../siorb-catalog" }
siorb-core = { path = "../siorb-core" }
siorb-policy = { path = "../siorb-policy" }
siorb-resolver = { path = "../siorb-resolver" }
toml.workspace = true

[lints]
workspace = true
