[package]
name = "siorb-catalog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
siorb-core = { path = "../siorb-core" }
toml.workspace = true
unicode-normalization.workspace = true
url.workspace = true
walkdir.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
