[package]
name = "siorb-executor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
hex.workspace = true
flate2.workspace = true
reqwest.workspace = true
serde.workspace = true
sha2.workspace = true
siorb-backends = { path = "../siorb-backends" }
siorb-catalog = { path = "../siorb-catalog" }
siorb-core = { path = "../siorb-core" }
siorb-planner = { path = "../siorb-planner" }
siorb-platform = { path = "../siorb-platform" }
siorb-resolver = { path = "../siorb-resolver" }
siorb-state = { path = "../siorb-state" }
tar.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
