[package]
name = "siorb-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
siorb-core = { path = "../siorb-core" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
