[package]
name = "siorb-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
semver.workspace = true
serde.workspace = true
siorb-catalog = { path = "../siorb-catalog" }
siorb-core = { path = "../siorb-core" }
toml.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
