[package]
name = "siorb-update"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
flate2.workspace = true
hex.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
siorb-core = { path = "../siorb-core" }
tar.workspace = true
url.workspace = true
zip.workspace = true

[target.'cfg(windows)'.dependencies]
atomicwrites = "0.4.4"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
