[package]
name = "siorb-xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
clap.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
siorb-catalog = { path = "../siorb-catalog" }
siorb-cli = { path = "../siorb-cli" }
siorb-core = { path = "../siorb-core" }
siorb-planner = { path = "../siorb-planner" }
siorb-policy = { path = "../siorb-policy" }
siorb-resolver = { path = "../siorb-resolver" }
siorb-update = { path = "../siorb-update" }
walkdir.workspace = true

[lints]
workspace = true
